# devbot

./: .gitignore  CLAUDE.md  ColorText.hs  LICENSE  Makefile  README.md  devbot.cabal  stack.yaml
Devbot/: Bot.hs  Core.hs  Daemon.hs  Event.hs  List.hs  Load.hs  ParseCheck.hs  Parser.hs  Persist.hs  Persistence.hs  Run.hs  Schema.hs  Service.hs  Status.hs  Table.hs
Devbot/Bot/: Common.hs  Core.hs  Event.hs  Service.hs
Devbot/Event/: Config.hs  Runtime.hs
Devbot/Internal/: ColorText.hs  Common.hs  Directory.hs  Display.hs  Healthcheck.hs  Monitor.hs  Parser.hs  Persist.hs  System.hs  Table.hs
Devbot/Service/: Config.hs  Runtime.hs
etc/: devbot.rc
src/: main.hs
test/: BotSpec.hs  CommonSpec.hs  EventBotSpec.hs  EventSpec.hs  HealthcheckSpec.hs  MonitorSpec.hs  ParserSpec.hs  SystemSpec.hs  TableSpec.hs
