name:                devbot
version:             0.1.1.0
synopsis:            A lightweight, inspectable task scheduler
description:         Please see README.md
homepage:            https://github.com/bitemyapp/hello#readme
license:             BSD3
license-file:        LICENSE
author:              Austin Voecks
maintainer:          austin.voecks@gmail.com
copyright:           2018, Austin Voecks
category:            Network
build-type:          Simple
cabal-version:       >=1.10

flag release
  description:         for installation
  default: False
  manual: True

executable devbot
  hs-source-dirs:      src
  main-is:             main.hs
  default-language:    Haskell2010

  ghc-options:
    -Wall

  if flag(release)
    ghc-options: -O2
  else
    ghc-options: -O0

  build-depends:
    base >= 4.7 && < 5,
    apocrypha,
    devbot,
    process,
    time

library
  hs-source-dirs:
    .

  ghc-options:
    -Wall

  if flag(release)
    ghc-options: -O2
  else
    ghc-options: -O0

  exposed-modules:
    Devbot.Event.Config
    Devbot.Event.Runtime

    Devbot.Service.Config
    Devbot.Service.Runtime

    Devbot.Internal.Common
    Devbot.Internal.Parser
    Devbot.Internal.System
    Devbot.Internal.Persist

    Devbot.Bot
    Devbot.Daemon
    Devbot.List
    Devbot.Status
    Devbot.Schema

    ColorText

  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    aeson,
    yaml,
    apocrypha,
    directory,
    filepath,
    process,
    text,
    time,
    unordered-containers,
    vector

  if os(windows)
    build-depends:
      Win32
  else
    build-depends:
      unix


test-suite bot
  hs-source-dirs:      test
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0

  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    hspec,
    QuickCheck,
    aeson,
    yaml,
    apocrypha,
    devbot,
    directory,
    filepath,
    process,
    text,
    time,
    unordered-containers,
    vector

  other-modules:
    ParserSpec
    EventBotSpec

  build-tool-depends: hspec-discover:hspec-discover == 2.*
