name:                devbot
version:             0.1.1.0
synopsis:            A lightweight, inspectable task scheduler
description:         Please see README.md
homepage:            https://public.anardil.net/code/devbot/
license:             BSD3
license-file:        LICENSE
author:              Austin
maintainer:          austin@anardil.net
copyright:           2018, Austin
category:            Utility
build-type:          Simple
cabal-version:       >=1.10

flag release
  description:         for installation
  default: False
  manual: True

executable devbot
  hs-source-dirs:      src
  main-is:             main.hs
  default-language:    Haskell2010

  ghc-options:
    -Wall

  if flag(release)
    ghc-options: -O2
  else
    ghc-options: -O0

  build-depends:
    base >= 4.7 && < 5,
    apocrypha,
    devbot,
    process,
    time

library
  hs-source-dirs:
    .

  ghc-options:
    -Wall

  if flag(release)
    ghc-options: -O2
  else
    ghc-options: -O0

  exposed-modules:
    Devbot.Event.Config
    Devbot.Event.Runtime

    Devbot.Service.Config
    Devbot.Service.Runtime

    Devbot.Internal.Common
    Devbot.Internal.ColorText
    Devbot.Internal.Display
    Devbot.Internal.Directory
    Devbot.Internal.Parser
    Devbot.Internal.System
    Devbot.Internal.Persist

    Devbot.Bot
    Devbot.Daemon
    Devbot.List
    Devbot.ParseCheck
    Devbot.Status
    Devbot.Schema
    Devbot.Table

  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    aeson,
    apocrypha,
    directory,
    filepath,
    process,
    scientific,
    text,
    time,
    vector,
    unordered-containers,
    yaml

  if os(windows)
    build-depends:
      Win32
  else
    build-depends:
      unix


test-suite bot
  hs-source-dirs:      test
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0

  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    aeson,
    apocrypha,
    devbot,
    directory,
    filepath,
    hspec,
    process,
    QuickCheck,
    text,
    time,
    vector,
    yaml,
    unordered-containers

  other-modules:
    CommonSpec
    ParserSpec
    SystemSpec
    EventSpec

  build-tool-depends: hspec-discover:hspec-discover == 2.*
